--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "chart.js": "^4.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
