--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "chart.js": "^4.5.1",
+    "crypto-js": "^4.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "rxjs": "~7.8.0",
@@ -36,6 +37,7 @@
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
